# edgedb-rust

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  flake.nix  justfile  rust-toolchain.toml  vagga.yaml
edgedb-client/: Cargo.toml  README.md
edgedb-client/examples/: dynamic_call.rs  list_databases.rs
edgedb-client/src/: builder.rs  client.rs  credentials.rs  debug.rs  errors.rs  features.rs  lib.rs  pool.rs  reader.rs  sealed.rs  server_params.rs  tls.rs  traits.rs
edgedb-client/src/pool/: command.rs  config.rs  connection.rs  implementation.rs  main.rs
edgedb-derive/: Cargo.toml  README.md
edgedb-derive/src/: attrib.rs  enums.rs  json.rs  lib.rs  lib.rs.orig  shape.rs  variables.rs
edgedb-derive/tests/: enums.rs  json.rs  list_scalar_types.rs  no-prelude.rs  varnames.rs
edgedb-derive/tests/fail/: enum.rs  enum.stderr
edgedb-errors/: Cargo.toml  README.md
edgedb-errors/src/: display.rs  error.rs  fields.rs  kinds.rs  lib.rs  miette.rs  traits.rs  transaction.rs
edgedb-protocol/: Cargo.toml  README.md
edgedb-protocol/src/: annotations.rs  bignum.rs  client_message.rs  codec.rs  common.rs  descriptors.rs  encoding.rs  error_response.rs  error_response.rs.bak  errors.rs  features.rs  json.rs  lib.rs  message.rs  model.rs  query_arg.rs  query_result.rs  queryable.rs  serialization.rs  server_message.rs  time.rs  value.rs  value_opt.rs
edgedb-protocol/src/bignum/: bigdecimal_interop.rs  num_bigint_interop.rs
edgedb-protocol/src/codec/: raw.rs
edgedb-protocol/src/model/: bignum.rs  json.rs  memory.rs  range.rs  time.rs  vector.rs
edgedb-protocol/src/model/bignum/: bigdecimal_interop.rs  num_bigint_interop.rs
edgedb-protocol/src/serialization/: decode.rs  reader.rs  test_scalars.rs
edgedb-protocol/tests/: client_messages.rs  codecs.rs  datetime_chrono.rs  datetime_system.rs  decode.rs  messages.rs  server_messages.rs  type_descriptors.rs
edgedb-repl/: Cargo.toml
edgedb-repl/src/: client.rs  commands.rs  error_display.rs  main.rs  options.rs  prompt.rs  reader.rs  repl.rs  server_params.rs  statement.rs  variables.rs
edgedb-repl/src/commands/: backslash.rs  cli.rs  configure.rs  describe.rs  filter.rs  helpers.rs  list.rs  list_aliases.rs  list_casts.rs  list_databases.rs  list_indexes.rs  list_modules.rs  list_object_types.rs  list_roles.rs  list_scalar_types.rs  mod.rs  options.rs  psql.rs  roles.rs  table.rs  type_names.rs
edgedb-repl/src/print/: buffer.rs  format.rs  formatter.rs  mod.rs  stream.rs  style.rs  tests.rs
edgedb-server/: Cargo.toml
edgedb-server/src/: connection.rs  listen.rs  main.rs  options.rs  reader.rs  writer.rs
edgedb-server/src/postgres/: client.rs  dsn.rs  mod.rs
edgedb-tokio/: Cargo.toml  README.md
edgedb-tokio/examples/: query_args.rs  simple.rs  transaction.rs  transaction_errors.rs  transaction_errors2.rs  transaction_errors3.rs
edgedb-tokio/src/: builder.rs  client.rs  credentials.rs  env.rs  errors.rs  lib.rs  nebula_development.pem  options.rs  query_executor.rs  sealed.rs  server_params.rs  state.rs  tls.rs  transaction.rs  tutorial.md  tutorial.rs
edgedb-tokio/src/raw/: connection.rs  dumps.rs  mod.rs  options.rs  queries.rs  response.rs  state.rs
edgedb-tokio/tests/func/: .gitignore  client.rs  derive.rs  globals.rs  main.rs  raw.rs  server.rs  transactions.rs
edgeql-pytest/: Cargo.toml
edgeql-pytest/src/: main.rs
edgeql-pytest/tests/: import.rs  pickle.rs  py.rs  tokenizer.rs
edgeql-python/: Cargo.toml
edgeql-python/src/: errors.rs  lib.rs  tokenizer.rs
examples/globals/: Cargo.toml
examples/globals/dbschema/: default.esdl
examples/globals/src/: main.rs
examples/query-error/: Cargo.toml
examples/query-error/src/: main.rs
gel-auth/: Cargo.toml  README.md
gel-auth/src/: md5.rs
gel-auth/src/handshake/: client_auth.rs  mod.rs  server_auth.rs
gel-auth/src/scram/: mod.rs  stringprep.rs
gel-derive/: Cargo.toml  README.md
gel-derive/src/: attrib.rs  enums.rs  json.rs  lib.rs  shape.rs  variables.rs
gel-derive/tests/: enums.rs  json.rs  list_scalar_types.rs  no-prelude.rs  varnames.rs
gel-dsn/: Cargo.toml  README.md
gel-dsn/src/: env.rs  file.rs  host.rs  lib.rs  user.rs
gel-dsn/src/gel/: config.rs  duration.rs  env.rs  error.rs  instance_name.rs  mod.rs  param.rs  params.rs  project.rs
gel-dsn/src/postgres/: host.rs  mod.rs  params.rs  passfile.rs  raw_params.rs  url.rs
gel-dsn/tests/gel/: test.rs
gel-dsn/tests/postgres/: edgedb_test_cases.rs  hardcore_host_test_cases.rs  libpq_test_cases.rs  test.rs
gel-errors/: Cargo.toml  README.md
gel-errors/src/: error.rs  fields.rs  kinds.rs  lib.rs  miette.rs  traits.rs
gel-protocol/: Cargo.toml  README.md
gel-protocol/src/: annotations.rs  codec.rs  descriptors.rs  encoding.rs  lib.rs  model.rs  query_arg.rs  query_result.rs  queryable.rs  serialization.rs  server_message.rs  value.rs  value_opt.rs
gel-protocol/src/model/: bignum.rs  json.rs  memory.rs  time.rs  vector.rs
gel-protocol/src/serialization/: decode.rs  test_scalars.rs
gel-protocol/tests/: base.rs  client_messages.rs  codecs.rs  datetime_chrono.rs  datetime_system.rs  decode.rs  server_messages.rs  type_descriptors.rs
gel-stream/: Cargo.toml  README.md
gel-stream/src/: lib.rs
gel-stream/src/client/: connection.rs
gel-stream/src/common/: openssl.rs  rustls.rs  stream.rs  target.rs  tls.rs  tokio_stream.rs
gel-stream/src/server/: acceptor.rs
gel-stream/tests/: tls.rs
gel-tokio/: Cargo.toml  README.md
gel-tokio/examples/: query_args.rs  simple.rs  transaction.rs  transaction_errors.rs
gel-tokio/src/: builder.rs  client.rs  credentials.rs  env.rs  errors.rs  letsencrypt_staging.pem  lib.rs  options.rs  query_executor.rs  state.rs  tls.rs  transaction.rs  tutorial.md  tutorial.rs
gel-tokio/src/raw/: connection.rs  dumps.rs  mod.rs  options.rs  queries.rs  state.rs  tls.rs
gel-tokio/tests/func/: client.rs  derive.rs  globals.rs  main.rs  raw.rs  server.rs  transactions.rs
tests/: Cargo.toml
tests/functional/src/: client.rs  globals.rs  main.rs  server.rs  transactions.rs
(+43 files in other folders)
