[workspace]
resolver = "2"
members = [
    "gel-auth",
    "gel-errors",
    "gel-derive",
    "gel-protocol",
    "gel-stream",
    "gel-tokio",
    "examples/globals",
    "examples/query-error",
    "tests",
]

[profile.release]
debug = true
lto = true

[workspace.dependencies]
tokio = { version = "1.43" }
tracing = { version = "0.1" }

[workspace.package]
rust-version = "1.75" # keep in sync with flake.nix

[workspace.lints.clippy]
useless_format = 'allow'
collapsible_if = 'allow'
derive_partial_eq_without_eq = 'allow'
zero_ptr = 'allow'
manual_strip = 'allow'
new_ret_no_self = 'allow'
type_complexity = 'allow'
vec_init_then_push = 'allow'
while_let_on_iterator = 'allow'
too_many_arguments = 'allow'
clone_on_copy = 'allow'
