[package]
name = "edgedb-client"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"

[dependencies]
edgedb-protocol = {path = "../edgedb-protocol"}
snafu = {version="0.6.0", features=["backtraces"]}
anyhow = "1.0.23"
async-std = "1.9"
bytes = "1.0.1"
scram = "0.5.0"
typemap = "0.3.3"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.16"
log = "0.4.8"
humantime-serde = "1.0.0"
rand = "0.8"
url = "2.1.1"
futures-util = "0.3.15"
tls-api = {version="0.5.0", default-features=false, features=["runtime-async-std"]}
tls-api-not-tls = {version="0.5.0", default-features=false, features=["runtime-async-std"]}
tls-api-rustls = {version="0.5.0", default-features=false, features=["runtime-async-std"]}
rustls = "0.19.1"
rustls-native-certs = "0.5.0"
webpki = "0.21.4"
webpki-roots = "0.21"
