[package]
name = "edgedb-client"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"
description = """
    EdgeDB database client implementation based on async-std.
"""

[dependencies]
edgedb-protocol = {path = "../edgedb-protocol", version="0.1.0"}
edgedb-errors = {path = "../edgedb-errors", version="0.1.0"}
edgedb-derive = {path = "../edgedb-derive", version="0.1.0", optional=true}
snafu = {version="0.6.0", features=["backtraces"]}
async-std = {version="1.10", features=[
    "unstable", # Condvar
]}
bytes = "1.0.1"
scram = "0.5.0"
typemap = "0.3.3"
serde = "1.0"
serde_json = "1.0"
sha1 = {version="0.6.0", features=["std"]}
log = "0.4.8"
rand = "0.8"
url = "2.1.1"
futures-util = "0.3.15"
tls-api = {version="0.5.0", default-features=false, features=["runtime-async-std"]}
tls-api-not-tls = {version="0.5.0", default-features=false, features=["runtime-async-std"]}
tls-api-rustls = {version="0.5.0", default-features=false, features=["runtime-async-std"]}
rustls = "0.19.1"
rustls-native-certs = "0.5.0"
webpki = "0.21.4"
webpki-roots = "0.21"
dirs = "3.0.0"
async-trait = "0.1.51"

[dev-dependencies]
env_logger = "0.9.0"

[features]
default = ["derive"]
derive = ["edgedb-derive"]
admin_socket = []
unstable = []  # features for CLI
