[package]
name = "edgedb-derive"
license = "MIT/Apache-2.0"
version = "0.4.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"
description = """
    Derive macros for EdgeDB database client.
"""
readme = "README.md"

[dependencies]
syn = {version="1.0", features=["full"]}
proc-macro2 = "1.0.19"
quote = "1.0"
trybuild = "1.0.19"

[dev-dependencies]
bytes = "1.0.1"
edgedb-protocol = {path="../edgedb-protocol"}
edgedb-tokio = {path="../edgedb-tokio"}
serde = "1.0"
serde_json = "1.0"

[lib]
proc-macro = true
