[package]
name = "edgedb-derive"
license = "MIT/Apache-2.0"
version = "0.6.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"
description = """
    Derive macros for EdgeDB database client.
    This crate has been renamed to gel-derive.
"""
readme = "README.md"
rust-version.workspace = true

[lib]
proc-macro = true
