[package]
name = "edgedb-errors"
license = "MIT/Apache-2.0"
version = "0.3.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"
description = """
    Error types for EdgeDB database client.
"""
readme = "README.md"

[dependencies]
bytes = "1.0.1"
miette = { version="5.3.0", optional=true }

[dev-dependencies]
tokio = "1.0"
anyhow = "1.0"
edgedb-tokio = { path="../edgedb-tokio" }

[lib]

