[package]
name = "edgedb-errors"
license = "MIT/Apache-2.0"
version = "0.5.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"
description = """
    Error types for EdgeDB database client.
    This crate has been renamed to gel-errors.
"""
readme = "README.md"
rust-version.workspace = true
