[package]
name = "edgedb-protocol"
license = "MIT/Apache-2.0"
version = "0.6.1"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"
description = """
    Low-level protocol implemenentation for EdgeDB database client.
    Use edgedb-tokio for applications instead.
"""
readme = "README.md"
rust-version.workspace = true

[dependencies]
bytes = "1.5.0"
snafu = {version="0.8.0", features=["backtrace"]}
uuid = "1.1.2"
num-bigint = {version="0.4.3", optional=true}
num-traits = {version="0.2.10", optional=true}
bigdecimal = {version="0.4.0", optional=true}
chrono = {version="0.4.23", optional=true, features=["std"], default-features=false}
edgedb-errors = {path = "../edgedb-errors", version = "0.4.0" }
bitflags = "2.4.0"
serde = {version="1.0.190", features = ["derive"], optional=true}
serde_json = {version="1", optional=true}

[features]
default = []
with-num-bigint = ["num-bigint", "num-traits"]
with-bigdecimal = ["bigdecimal", "num-bigint", "num-traits"]
with-chrono = ["chrono"]
all-types = ["with-num-bigint", "with-bigdecimal", "with-chrono"]
with-serde = ["serde", "serde_json"]

[dev-dependencies]
rand = "0.8"
pretty_assertions = "1.2.1"
test-case = "3.0.0"
humantime = "2.1.0"

[lib]

[lints]
workspace = true
