[package]
name = "edgedb-protocol"
license = "MIT/Apache-2.0"
version = "0.7.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"
description = """
    Low-level protocol implementation for EdgeDB database client.
    Use edgedb-tokio for applications instead.
    This crate has been renamed to gel-protocol.
"""
readme = "README.md"
rust-version.workspace = true

[features]
default = []
with-num-bigint = []
with-bigdecimal = []
with-chrono = []
all-types = []
with-serde = []

[lints]
workspace = true
