[package]
name = "edgedb-repl"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"

[dependencies]
edgedb-protocol = {path = "../edgedb-protocol", features=["all-types"]}
edgeql-parser = {path = "../edgeql-parser"}
snafu = {version="0.6.0", features=["backtraces"]}
anyhow = "1.0.23"
async-std = {version="1", features=[
    # we need stdin/stdout and channel
    "unstable",
]}
bytes = "0.4.12"
rustyline = { git="https://github.com/tailhook/rustyline", branch="edgedb" }
clap = "2.33.0"
structopt = "0.3.5"
whoami = "0.6.0"
atty = "0.2.13"


[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"

[[bin]]
name = "edgedb"
path = "src/main.rs"
