[package]
name = "edgedb-repl"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"

[dependencies]
edgedb-protocol = {path = "../edgedb-protocol", features=["all-types"]}
edgeql-parser = {path = "../edgeql-parser"}
edgedb-derive = {path = "../edgedb-derive"}
snafu = {version="0.6.0", features=["backtraces"]}
anyhow = "1.0.23"
async-std = {version="1", features=[
    # we need stdin/stdout and channel
    "unstable",
]}
bytes = "0.5.3"
rustyline = { git="https://github.com/tailhook/rustyline", branch="edgedb"}
clap = "2.33.0"
structopt = "0.3.5"
whoami = "0.6.0"
atty = "0.2.13"
scram = "0.4.0"
rpassword = "4.0.3"
colorful = "0.2.1"
term_size = "0.3.1"
bigdecimal = "0.1.0"
num-bigint = "0.2.3"
humantime = "1.0.0"
lazy_static = "1.4.0"
chrono = "0.4.0"
unicode-segmentation = "1.6.0"
typemap = "0.3.3"
serde = "1.0"
serde_json = "1.0"
dirs = "2.0.2"
uuid = "0.8.1"
prettytable-rs = {version="0.8.0", default-features=false}
tempfile = "3.1.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"

[[bin]]
name = "edgedb"
path = "src/main.rs"
