[package]
name = "edgedb-tokio"
license = "MIT/Apache-2.0"
version = "0.5.1"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = """
    EdgeDB database client implementation for tokio.
"""
readme = "README.md"
rust-version.workspace = true

[dependencies]
edgedb-protocol = { path = "../edgedb-protocol", version = "0.6.0", features = [
    "with-serde",
] }
gel-errors = { path = "../gel-errors", version = "0.4" }
edgedb-derive = { path = "../edgedb-derive", version = "0.5.1", optional = true }
tokio = { version = "1.15", features = ["net", "time", "sync", "macros"] }
bytes = "1.5.0"
scram = { version = "0.7", package = "scram-2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha1 = { version = "0.10.1", features = ["std"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
log = "0.4.8"
rand = "0.8"
url = "2.1.1"
tls-api = { version = "0.12.0" }
tls-api-not-tls = { version = "0.12.1" }
tls-api-rustls = { version = "0.12.1" }
rustls = { version = "0.23.5", default-features = false, features = [
    "ring",
] } # keep in sync with tls-api
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.1.2"
webpki = { package = "rustls-webpki", version = "0.102.2", features = [
    "std",
], default-features = false }
webpki-roots = "0.26.1"
async-trait = "0.1.52"
anyhow = "1.0.53" # needed for tls-api
dirs = { version = "5.0.0", optional = true }
arc-swap = "1.5.1"
once_cell = "1.9.0"
tokio-stream = { version = "0.1.11", optional = true }
base64 = "0.22.1"
crc16 = "0.4.0"
socket2 = "0.5"

[target.'cfg(target_family="unix")'.dev-dependencies]
command-fds = "0.3.0"

[dev-dependencies]
shutdown_hooks = "0.1.0"
env_logger = "0.11"
thiserror = "2"
test-log = "0.2.8"
futures-util = "0.3.21"
miette = { version = "7.2.0", features = ["fancy"] }
gel-errors = { path = "../gel-errors", features = ["miette"] }
test-utils = { git = "https://github.com/edgedb/test-utils.git" }
tempfile = "3.13.0"

[features]
default = ["derive", "env"]
derive = ["edgedb-derive"]
env = ["fs"]
admin_socket = ["dirs"]
unstable = ["serde_json", "tokio-stream"] # features for CLI and Wasm
fs = ["tokio/fs", "dirs", "serde_json"]
miette-errors = ["gel-errors/miette"]

[lints]
workspace = true
