[package]
name = "edgedb-tokio"
license = "MIT/Apache-2.0"
version = "0.6.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = """
    EdgeDB database client implementation for tokio.
    This crate has been renamed to gel-tokio.
"""
readme = "README.md"
rust-version.workspace = true

[dependencies]
edgedb-derive = { path = "../edgedb-derive", version = "0.6", optional = true }
serde_json = { version = "1.0", optional = true }
dirs = { version = "5.0.0", optional = true }
tokio-stream = { version = "0.1.11", optional = true }

[features]
default = []
derive = []
env = []
admin_socket = []
unstable = []
fs = []
miette-errors = []

[lints]
workspace = true
