[package]
name = "edgeql-pytest"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"

[dependencies]
edgeql-parser = {path = "../edgeql-parser"}
lazy_static = "1.4.0"

[dependencies.cpython]
git = "git://github.com/dgrunwald/rust-cpython"
rev = "dabc06c"

[[bin]]
name = "edgeql-pytest"
