[package]
name = "edgeql-python"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"

[dependencies]
edgedb-protocol = {path = "../edgedb-protocol"}

[dependencies.cpython]
git = "git://github.com/dgrunwald/rust-cpython"
rev = "dabc06c"
features = ["extension-module"]

[lib]
crate-type = ["cdylib"]
name = "edgeql_python"
path = "src/lib.rs"
