[package]
name = "gel-errors"
license = "MIT/Apache-2.0"
version = "0.5.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"
description = "Error types for Gel database client. Formerly published as gel-errors."
readme = "README.md"
rust-version.workspace = true

[dependencies]
bytes = "1.0.1"
miette = { version = "7.2.0", optional = true }

[lib]

[lints]
workspace = true
