[package]
name = "gel-stream"
license = "MIT/Apache-2.0"
version = "0.1.2"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = "A library for streaming data between clients and servers."
readme = "README.md"
rust-version.workspace = true

[features]
# rustls or openssl imply tokio, and tokio is the only stream we support
# at this time.
default = ["tokio"]
full = ["client", "server", "tokio", "rustls", "openssl", "hickory", "keepalive"]
client = []
server = []
tokio = ["dep:tokio"]
rustls = ["tokio", "dep:rustls", "dep:rustls-tokio-stream", "dep:rustls-platform-verifier", "dep:webpki", "dep:webpki-roots"]
openssl = ["tokio", "dep:openssl", "dep:tokio-openssl", "dep:foreign-types", "dep:openssl-sys", "dep:openssl-probe", "dep:webpki-root-certs"]
hickory = ["dep:hickory-resolver"]
keepalive = ["dep:socket2"]
__manual_tests = []

[dependencies]
derive_more = { version = "2", features = ["full"] }
thiserror = "2"
futures = "0.3"

# Given that this library may be used in multiple contexts, we want to limit the
# features we enable by default.

rustls-pki-types = { version = "1", default-features = false, features = ["std"] }

# feature = "keepalive"
socket2 = { version = "0.5.2", optional = true }

# feature = "tokio"
tokio = { version = "1", optional = true, default-features = false, features = ["net", "rt"] }
hickory-resolver = { version = "0.24.2", optional = true, default-features = false, features = ["tokio-runtime", "system-config"] }

# feature = "rustls"
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-tokio-stream = { version = "0.5.0", optional = true }
rustls-platform-verifier = { version = "0.5.0", optional = true }
webpki = { version = "0.22", optional = true }
webpki-roots = { version = "0.26.8", optional = true }

# feature = "openssl"
openssl = { version = "0.10.71", optional = true, default-features = false }
tokio-openssl = { version = "0.6.5", optional = true, default-features = false }
# Get these from openssl
foreign-types = { version = "0.3", optional = true, default-features = false }
openssl-sys = { version = "0.9", optional = true, default-features = false }
openssl-probe = { version = "0.1.6", optional = true, default-features = false }
webpki-root-certs = { version = "0.26.8", optional = true }

[dev-dependencies]
# Run tests with all features enabled
gel-stream = { path = ".", features = ["full"] }

tokio = { version = "1", features = ["full"] }
tempfile = "3"
ntest = "0.9.3"
rustls-pemfile = "2"
x509-parser = "0.17.0"

[lints]
workspace = true

[lib]
name = "gel_stream"
