[package]
name = "gel-tokio"
license = "MIT/Apache-2.0"
version = "0.9.6"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = """
    Gel database client implementation for tokio.
    Formerly published as gel-tokio.
"""
readme = "README.md"
rust-version.workspace = true

[dependencies]
gel-protocol = { path = "../gel-protocol", version = "0.8", features = [
    "with-serde",
] }
gel-errors = { path = "../gel-errors", version = "0.5" }
gel-derive = { path = "../gel-derive", version = "0.7", optional = true }
gel-stream = { path = "../gel-stream", version = "0.2.0", features = ["client", "tokio", "rustls", "hickory", "keepalive"] }
gel-dsn = { path = "../gel-dsn", version = "0.1.0", features = ["gel", "log", "auto-log-trace", "auto-log-warning"] }
gel-auth = { path = "../gel-auth", version = "0.1.3" }
tokio = { workspace = true, features = ["net", "time", "sync", "macros"] }
bytes = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha1 = { version = "0.10.1", features = ["std"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
log = "0.4.8"
rand = "0.9"
url = "2.1.1"
async-trait = "0.1.52"
anyhow = "1.0.53" # needed for tls-api
dirs = { version = "6.0.0", optional = true }
arc-swap = "1.5.1"
once_cell = "1.9.0"
base64 = "0.22.1"
crc16 = "0.4.0"
futures-util = "0.3"
rustls-pemfile = "2"

[dev-dependencies]
anyhow = "1.0.68"
bytes = "1.0"
once_cell = "1.17.0"
dtor = "0"
env_logger = "0.11"
thiserror = "2"
test-log = "0.2.8"
futures-util = "0.3.21"
miette = { version = "7.2.0", features = ["fancy"] }
tempfile = "3.13.0"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_family="unix")'.dev-dependencies]
command-fds = "0.3.0"

[features]
default = ["derive", "env"]
derive = ["gel-derive"]
env = ["fs"]
admin_socket = ["dirs"]
unstable = ["serde_json"] # features for CLI and Wasm
fs = ["tokio/fs", "dirs", "serde_json"]
miette-errors = ["gel-errors/miette"]

[lints]
workspace = true
