[package]
name = "globals-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
edgedb-tokio = { version = "0.5.0", path="../../edgedb-tokio"}
gel-derive = { version = "0.5.0", path="../../gel-derive"}
tokio = {version="1.20", features=["macros", "rt", "rt-multi-thread"]}
env_logger = "0.11.3"
