[package]
name = "query-error-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
edgedb-tokio = {path="../../edgedb-tokio"}
edgedb-errors = {path="../../edgedb-errors", features=["miette"]}
edgedb-derive = {path="../../edgedb-derive"}
tokio = {version="1.20", features=["macros", "rt", "rt-multi-thread"]}
env_logger = "0.9.0"
miette = {version="5.3.0", features=["fancy"]}
