[package]
name = "query-error-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
edgedb-tokio = { path = "../../edgedb-tokio", features = ["miette-errors"] }
gel-derive = { path = "../../gel-derive" }
tokio = { version = "1.20", features = ["macros", "rt", "rt-multi-thread"] }
env_logger = "0.11.3"
miette = { version = "7.2.0", features = ["fancy"] }
